[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_risk"
version = "0.1.0"
description = "Transaction risk modeling pipeline with time aware validation"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
license = {text = "MIT"}
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "joblib>=1.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
